libdebian-installer (0.19.cvs) UNRELEASED; urgency=low

  * Bastian Blank
    - Add conversation functions for parts of a package entry.
  * Stephen R. Marenka
    - Add scsi cd (scd?) device info to mapdevfs.

 -- Bastian Blank <waldi@debian.org>  Sun, 22 Feb 2004 17:29:42 +0100

libdebian-installer (0.19) unstable; urgency=low

  * Bastian Blank
    - Minimal Packages parser parses Size and Priority.
    - Packages parser uses simpler matches.

 -- Bastian Blank <waldi@debian.org>  Fri, 06 Feb 2004 14:07:18 +0100

libdebian-installer (0.18) unstable; urgency=low

  * Alastair McKinstry
    - Add di_info(), di_debug() logging macros.
  * Bastian Blank
    - Bump revision to 1.
    - Remove mapping of di_log.
    - Add any symbol to the version script.
    - Use size_t in hash map and mem_chunk allocer. (closes: #215448)
    - Improve and install documentation.
    - Add -extra lib.
    - Fix description parsing. (closes: #219902)
    - Remove some references to the chunk allocator.
    - Add version info to installed headers.
    - Default log handler suppress debug messages.
    - Enable support for Subarchitecure.
    - Correctly terminate argv.
  * Petter Reinholdtsen
    - Define PATH_MAX if it is undefined, to get this building on
      GNU/Hurd.  Patch from Santiago Vila. (Closes: #219464)
  * Matt Kraai
    - Prefer a package that is installed to one that isn't when satisfying
      a dependency on a virtual package.

 -- Bastian Blank <waldi@debian.org>  Wed, 21 Jan 2004 17:56:11 +0100

libdebian-installer (0.17) unstable; urgency=low

  * Bastian Blank
    - disable subarch stuff

 -- Bastian Blank <waldi@debian.org>  Fri, 03 Oct 2003 18:07:44 +0200

libdebian-installer (0.16) experimental; urgency=low

  * Bastian Blank
    - rework lib
      - add rfc822 parser
      - add logging
      - add packages file parsing
    - dump major to 4

 -- Bastian Blank <waldi@debian.org>  Thu, 28 Aug 2003 17:46:27 +0200
